bug report: when printing the talents, the last word can get cut off if its on a line by itself; broader refactoring to the text layout code to make it more reliable.

--- a/WebTools/src/scss/specialChars.scss
+++ b/WebTools/src/scss/specialChars.scss
@@ -19,3 +19,9 @@
 table.selection-list .delta::after {
     font-size: 12px;
 }
+
+@media screen and (min-width: 0px) and (max-width: 800px) {
+    table.selection-list .delta::after {
+        font-size: 10px;
+    }
+}
